git-svn-id: http://svn.vdombox.ru/flextools/trunk@7467 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -8,4 +8,4 @@ work_area_delete_resource = Удалить ресурс
 work_area_show_info = Показать сводку
 work_area_hide_info = Скрыть сводку
 work_area_add_resources = Добавить ресурсы
-work_area_get_resource = Получить ресурс
+work_area_get_resource = Сохранить ресурс
