New design Events
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7468 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -11,12 +11,12 @@ work_area_show_current = Display mode:
 
 # ObjectsTreePanel
 
-objects_tree_panel_title = Pages
+objects_tree_panel_title = PAGES
 
 # EventsPanel
 
-events_panel_events_title = Events
-events_panel_actions_title = Actions
+events_panel_events_title = EVENTS
+events_panel_actions_title = ACTIONS
 
 # ActionElementSkin
 
