--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -11,12 +11,12 @@ work_area_show_current = Вид показа:
 
 # ObjectsTreePanel
 
-objects_tree_panel_title = Страницы
+objects_tree_panel_title = СТРАНИЦЫ
 
 # EventsPanel
 
-events_panel_events_title = События
-events_panel_actions_title = Действия
+events_panel_events_title = СОБЫТИЯ
+events_panel_actions_title = ДЕЙСТВИЯ
 
 # ActionElementSkin
 
