git-svn-id: http://svn.vdombox.ru/flextools/trunk@7546 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -2,9 +2,9 @@
 title = DataBase
 toolset_button_label = DataBase
 
-# WorkAreaSkin
+# CreateNewObjectWindow
 
-work_area_delete_resource = Delete Resource
-work_area_show_info = Show Info
-work_area_hide_info = Hide Info
-work_area_add_resources = Add Resources
+create_new_object_window_OK = OK
+create_new_object_window_Cancel = Cancel
+create_new_object_window_Name = Name
+create_new_object_window_Base = Base
