--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -2,9 +2,9 @@
 title = Данные
 toolset_button_label = Данные
 
-# WorkAreaSkin
+# CreateNewObjectWindow
 
-work_area_delete_resource = Удалить ресурс
-work_area_show_info = Показать сводку
-work_area_hide_info = Скрыть сводку
-work_area_add_resources = Добавить ресурсы
+create_new_object_window_OK = OK
+create_new_object_window_Cancel = Отмена
+create_new_object_window_Name = Имя
+create_new_object_window_Base = База
