--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -2,9 +2,9 @@
 title = DataBase
 toolset_button_label = DataBase
 
-# WorkAreaSkin
+# CreateNewObjectWindow
 
-work_area_delete_resource = Delete Resource
-work_area_show_info = Show Info
-work_area_hide_info = Hide Info
-work_area_add_resources = Add Resources
+create_new_object_window_OK = OK
+create_new_object_window_Cancel = Cancel
+create_new_object_window_Name = Name
+create_new_object_window_Base = Base
