--- a/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
@@ -9,3 +9,7 @@ work_area_show_info = Show Info
 work_area_hide_info = Hide Info
 work_area_add_resources = Add Resources
 work_area_get_resource = Save Resource
+
+#List
+
+list_filter = Filter resource
