--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -9,3 +9,7 @@ work_area_show_info = Показать сводку
 work_area_hide_info = Скрыть сводку
 work_area_add_resources = Добавить ресурсы
 work_area_get_resource = Сохранить ресурс
+
+#List
+
+list_filter = Фильтр ресурсов
