--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -22,6 +22,11 @@ toolset_button_label = WYSIWYG
 		object_attributes_panel_title = Object Properties
 		object_attributes_panel_save = Save
 		object_attributes_panel_delete = Delete
+		
+		# attribute
+		
+			attribut_error_in_attribute = The error in the attribute! Selected parameter does not exist. Perhaps he did not come.
+			attribut_name = Name
 
 	# HelpPanel
 
