--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -24,6 +24,11 @@ toolset_button_label = WYSIWYG
 		object_attributes_panel_title = Свойства объекта
 		object_attributes_panel_save = Сохранить
 		object_attributes_panel_delete = Удалить
+		
+		# attribute
+		
+			attribut_error_in_attribute = Ошибка в атрибуте. Выделенный параметр не существеут. Возможно он не пришел.
+			attribut_name = Имя
 
 	# HelpPanel
 
