git-svn-id: http://svn.vdombox.ru/flextools/trunk@7576 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -3,6 +3,7 @@ title = Scripts
 toolset_button_label = Scripts
 ok = OK
 cancel = Cancel
+save = Save
 
 # Containers Panel
 containers_panel_title = Containers
