--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -3,6 +3,7 @@ title = Scripts
 toolset_button_label = Scripts
 ok = OK
 cancel = Cancel
+save = Save
 
 # Containers Panel
 containers_panel_title = Containers
