--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -13,3 +13,9 @@ work_area_get_resource = Сохранить ресурс
 #List
 
 list_filter = Фильтр ресурсов
+
+#InfoArea
+
+info_area_name = Имя: 
+info_area_type = Тип:  
+info_area_size = Размер:  
