--- a/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
@@ -13,3 +13,9 @@ work_area_get_resource = Save Resource
 #List
 
 list_filter = Filter resource
+
+#InfoArea
+
+info_area_name = Name: 
+info_area_type = Type:  
+info_area_size = Size:  
