--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -8,6 +8,7 @@ work_area_save = Save
 work_area_undo = Undo
 work_area_show_hidden = Show hidden
 work_area_show_current = Display mode:
+work_area_page = Page: 
 
 # ObjectsTreePanel
 
