--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -8,6 +8,7 @@ work_area_save = Сохранить
 work_area_undo = Отменить
 work_area_show_hidden = Показать скрытые
 work_area_show_current = Вид показа:
+work_area_page = Страница:
 
 # ObjectsTreePanel
 
