--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -8,3 +8,38 @@ create_new_object_window_OK = OK
 create_new_object_window_Cancel = Отмена
 create_new_object_window_Name = Имя
 create_new_object_window_Base = База
+
+# DataTable
+
+data_table_data = Данные
+data_table_structure = Структура
+
+# DataTableQuery
+
+data_table_query_sql_string = SQL запрос
+data_table_query_send_query = отправить
+data_table_query_error = Сообщения об ошибках
+data_table_query_data_returned = Полученные данные:
+
+# DataTableEditor
+
+data_table_editor_pages = Страницы:
+data_table_editor_records = Записей на странице:
+data_table_editor_apply = ОК
+data_table_editor_add_row = Добавить
+data_table_editor_delete_row = Удалить
+data_table_editor_commit = Отправить
+data_table_editor_discard = Отмена
+
+# DataTableStructure
+
+data_table_structure_add = Добавить
+data_table_structure_delete = Удалить
+data_table_structure_commit = Отправить
+data_table_structure_discard = Отмена
+
+data_table_structure_delete_dialog = Удаление: Вы можете потерять данные! Вы действительно хотите удалить?
+
+# SearchBox
+
+search_box_search = Поиск:
