--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -8,3 +8,38 @@ create_new_object_window_OK = OK
 create_new_object_window_Cancel = Cancel
 create_new_object_window_Name = Name
 create_new_object_window_Base = Base
+
+# DataTable
+
+data_table_data = Data
+data_table_structure = Structure
+
+# DataTableQuery
+
+data_table_query_sql_string = SQL string
+data_table_query_send_query = send query
+data_table_query_error = Error message from database engine
+data_table_query_data_returned: = Data returned:
+
+# DataTableEditor
+
+data_table_editor_pages = Pages:
+data_table_editor_records = Records per page:
+data_table_editor_apply = apply
+data_table_editor_add_row = add row
+data_table_editor_delete_row = delete row
+data_table_editor_commit = commit
+data_table_editor_discard = discard
+
+# DataTableStructure
+
+data_table_structure_add = add
+data_table_structure_delete = delete
+data_table_structure_commit = commit
+data_table_structure_discard = discard
+
+data_table_structure_delete_dialog = Remove: You might lose data! Do you really want to remove?
+
+# SearchBox
+
+search_box_search = Search:
