--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -6,12 +6,12 @@ toolset_button_label = WYSIWYG
 # Work Area
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 
-	work_area_xml_save_button_label = Save
+	work_area_xml_save_button_label = Enregistrer
 
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
-	work_area_show_linking = Show linking
+	work_area_show_linking = Afficher les liens
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
@@ -20,18 +20,18 @@ toolset_button_label = WYSIWYG
 
 	# ObjectAttributesPanel
 
-		object_attributes_panel_title = Object Properties
-		object_attributes_panel_save = Save
-		object_attributes_panel_delete = Delete
+		object_attributes_panel_title = propriétés des liens
+		object_attributes_panel_save = Enregistrer
+		object_attributes_panel_delete = Supprimer
 		
 		# attribute
 		
-			attribut_error_in_attribute = The error in the attribute! Selected parameter does not exist. Perhaps he did not come.
-			attribut_name = Name
+			attribut_error_in_attribute = Cette objet VDOM n'est pas conforme sur cet attribue, veuillez reporter l'erreur au support.
+			attribut_name = Nom
 
 	# HelpPanel
 
-		help_panel_title = Help
+		help_panel_title = Aide
 
 	#ObjectTreePanel
 
@@ -46,25 +46,25 @@ toolset_button_label = WYSIWYG
 
 	# MultilineWindow
 
-		multiline_window_title = Multiline window
-		multiline_window_add_resource = Resources
-		multiline_window_save = Save
+		multiline_window_title = Fenêtre multiligne
+		multiline_window_add_resource = Ressources
+		multiline_window_save = Enregistrer
 
 	# ColorPickerWindow
 
-		color_picker_window_use = Use
+		color_picker_window_use = Utiliser
 
 	# ResourceSelectorWindow
 
-		resource_selector_window_title = Resource browser
-		resource_selector_window_filter = Filter resource
-		resource_selector_window_total = Total Resources:
-		resource_selector_window_upload = Upload File...
-		resource_selector_window_insert = Insert
+		resource_selector_window_title = Naviguer dans les ressources
+		resource_selector_window_filter = Filtrer les ressources
+		resource_selector_window_total = Ressources totales:
+		resource_selector_window_upload = Téléchargement du fichier...
+		resource_selector_window_insert = Isérer
 		
 	# SpinnerPopup
-		spinner_create_resources = Creating resources list ...
-		spinner_new_resource = Creating new resource ...
+		spinner_create_resources = Création de la liste des ressources ...
+		spinner_new_resource = Creation d'une ressource ...
 		
 		
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
@@ -75,36 +75,36 @@ toolset_button_label = WYSIWYG
 	#RichTextToolbar
 	
 		richtext_toolbar_style = Style
-		richtext_toolbar_font = Font
-		richtext_toolbar_size = Size
-		richtext_toolbar_text_color = Text Color
-		richtext_toolbar_fill_color = Fill Color
+		richtext_toolbar_font = Police
+		richtext_toolbar_size = Taille
+		richtext_toolbar_text_color = Couleur du texte
+		richtext_toolbar_fill_color = Couleur de remplissage
 		richtext_toolbar_source = Source
 		
-		richtext_toolbar_select_all = Select All
-		richtext_toolbar_remove_format = Remove format
-		richtext_toolbar_insert_link = Insert Link
-		richtext_toolbar_unlink = Unlink
-		richtext_toolbar_insert_horizontal_rule = Insert horizontal rule
-		richtext_toolbar_insert_char = Insert char
-		richtext_toolbar_bold = Bold
-		richtext_toolbar_italic = Italic
-		richtext_toolbar_underline = Underline
-		richtext_toolbar_strikethrough = Strike through
-		richtext_toolbar_justify_left = Justify left
-		richtext_toolbar_justify_right = Justify right
-		richtext_toolbar_justify_center = Justify center
-		richtext_toolbar_justify_full = Justify full
-		richtext_toolbar_insert_ordered_list = Insert ordered list
-		richtext_toolbar_insert_unordered_list = Insert unordered list
-		richtext_toolbar_outdent = Outdent
-		richtext_toolbar_indent = Indent
+		richtext_toolbar_select_all = Tout selectionner
+		richtext_toolbar_remove_format = Supprimer le formattage
+		richtext_toolbar_insert_link = Insérer un lien
+		richtext_toolbar_unlink = Séparer
+		richtext_toolbar_insert_horizontal_rule = Insérer un séparateur horizontal
+		richtext_toolbar_insert_char = Inserer un charactére
+		richtext_toolbar_bold = Gras
+		richtext_toolbar_italic = Italique
+		richtext_toolbar_underline = Souligné
+		richtext_toolbar_strikethrough = Barré
+		richtext_toolbar_justify_left = Justifié à gauche
+		richtext_toolbar_justify_right = Justifié à droite
+		richtext_toolbar_justify_center = Justifié au centre
+		richtext_toolbar_justify_full = Totalement justifié
+		richtext_toolbar_insert_ordered_list = Insérer une liste ordonée
+		richtext_toolbar_insert_unordered_list = Insérer une liste non ordonnée
+		richtext_toolbar_outdent = Diminuer le retrait
+		richtext_toolbar_indent = Augmenter le retrait
 				
 	#TextToolBar
 	
-		text_toolbar_font = Font
-		text_toolbar_size = Size
-		text_toolbar_text_color = Text Color
+		text_toolbar_font = Police
+		text_toolbar_size = Taille
+		text_toolbar_text_color = Couleur du texte
 				
 	#Renderer
 	
@@ -113,6 +113,7 @@ toolset_button_label = WYSIWYG
 		
 	#ContextMenu
 	
-		contextMenu_delete = Delete
-		contextMenu_copy = Copy
-		contextMenu_paste = Paste
+		contextMenu_delete = Supprimer
+		contextMenu_copy = Copier
+		contextMenu_paste = Coller
+
