--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -1,33 +1,31 @@
 login_button_label = Logout
 
 #Module categories
-applicationManagment = applicationManagment
-editor = editor
-language = language
-some = some
+applicationManagment = Gestionnaire d'application
+editor = editeur
+language = langue
+some = certains
 
 # SettingsWindow
 
 	settingswindow_ok = OK
-	settingswindow_cancel = Cancel
+	settingswindow_cancel = Annuler
 	
 # ApplicationManagerWindow
 
 	application_manager_window_title = APP MANAGER
 	
-	change_application_add_new_application = Add new application
-	change_application_open_in_editor = Open
-	change_application_edit = Edit
+	change_application_add_new_application = Ajouter une nouvelle application
+	change_application_open_in_editor = Ouvrir
+	change_application_edit = Editer
 	
-	create_edit_application_name = Name
+	create_edit_application_name = Nom
 	create_edit_application_description = Description
-	create_edit_application_save = Ок
-	create_edit_application_cancel = Cancel
-	create_edit_application_script_language = Script Language
+	create_edit_application_cancel = Annuler
+	create_edit_application_script_language = Langage de script
 	
-	iconchooser_select_icon = Select icon
-	iconchooser_load_from_computer = Load from computer
-	iconchooser_icon = Icon
+	iconchooser_select_icon = Choisir un icone
+	iconchooser_load_from_computer = Depuis un fichier
+	iconchooser_icon = Icone
 	
-	iconchooser_cancel = Cancel
-	iconchooser_ok = Ок
+	iconchooser_cancel = Annuler
