--- a/IDE/v.02/core/locale/fr_FR/LoginForm.properties
+++ b/IDE/v.02/core/locale/fr_FR/LoginForm.properties
@@ -1,8 +1,8 @@
 title = Entrer votre nom d'utilisateur et mot de passe 
 username = Utilisateur
 password = Mot de passe
-hostname = Server IP
+hostname = IP ou url du serveur
 language = Langue
 quit_button = Quitter
-back_button = Back
-save_button = Save
+back_button = En arriere
+save_button = Enregistrer
