--- a/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/fr_FR/Tree_General.properties
@@ -1,49 +1,50 @@
 # Title
-title = Tree
-toolset_button_label = Tree
+title = Arboresence
+toolset_button_label = Arbre
 
 # WorkAreaSkin
 
-work_area_save = Save
-work_area_undo = Undo
-work_area_new_page = New Page
-work_area_auto_spacing = Autospacing
-work_area_expand_all = Expand All
-work_area_collapse_all = Collapse All
-work_area_show_signature = Show Signature
-work_area_hide_signature = Hide Signature
+work_area_save = Enregistrer
+work_area_undo = Revenir
+work_area_new_page = Nouvelle page
+work_area_auto_spacing = Placement automatique
+work_area_expand_all = Ouvrir tout
+work_area_collapse_all = Réduir tout
+work_area_show_signature = Afficher les priorités
+work_area_hide_signature = Cacher les priorités
 
 menu_panel_title = Menu
 
-properties_panel_title = Properties
-properties_panel_page_title = Title
-properties_panel_page_name = Name
+properties_panel_title = Propriétés
+properties_panel_page_title = Titre
+properties_panel_page_name = Nom
 properties_panel_page_description = Description
 properties_panel_page_image = Image
 
-properties_panel_btn_save = Save
-properties_panel_btn_start = Home
-properties_panel_btn_delete = Delete
+properties_panel_btn_save = Enregistrer
+properties_panel_btn_start = Départ
+properties_panel_btn_delete = Supprimer
 
-levels_panel_title = Levels
+levels_panel_title = Niveaux
 
-level_show_all = Show All
-level_hide_all = Hide All
+level_show_all = Afficher tout
+level_hide_all = Cacher tout
 
-level_0 = Level 0
-level_1 = Level 1
-level_2 = Level 2
-level_3 = Level 3
-level_4 = Level 4
-level_5 = Level 5
-level_6 = Level 6
-level_7 = Level 7
+level_0 = Niveau 0
+level_1 = Niveau 1
+level_2 = Niveau 2
+level_3 = Niveau 3
+level_4 = Niveau 4
+level_5 = Niveau 5
+level_6 = Niveau 6
+level_7 = Niveau 7
 
 # TreeElementSkin
 
-tree_element_hide = Hide
-tree_element_show = Show
-tree_element_create_linkage = Create Linkage
-tree_element_delete = Delete
+tree_element_hide = Cacher
+tree_element_show = Afficher
+tree_element_create_linkage = Créer un lien
+tree_element_delete = Supprimer
 
-create_page_title = Select page type
+create_page_title = Selectionnez le type de conteneur
+
