--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -2,30 +2,30 @@
 title = Scripts
 toolset_button_label = Scripts
 ok = OK
-cancel = Cancel
-save = Save
+cancel = Annuler
+save = Enregistrer
 
 # Containers Panel
-containers_panel_title = Containers
+containers_panel_title = Conteneurs
 
 # ServerScripts Panel
-server_scripts_panel_title = Server Scripts
-server_scripts_panel_add = Add
-server_scripts_panel_delete = Delete
+server_scripts_panel_title = Scripts Server
+server_scripts_panel_add = Ajouter
+server_scripts_panel_delete = Supprimer
 
 # Libraries Panel
 libraries_panel_title = Libraries
-libraries_panel_add = Add
-libraries_panel_delete = Delete
+libraries_panel_add = Ajouter
+libraries_panel_delete = Supprimer
 
 # GlobalScripts Panel
-global_scripts_panel_title = Global Scripts
+global_scripts_panel_title = Scripts globaux
 
 # Create Action Window
-create_action_window_action_title = Add New Action 
-create_action_window_library_title = Add New Library
-create_action_window_description = Input Script Name:
-create_action_window_name_error_description = Please Input Correct Name
+create_action_window_action_title = Ajouter une nouvelle action
+create_action_window_library_title = Ajouter une nouvelle librairie
+create_action_window_description = Saisir le nom du script:
+create_action_window_name_error_description = Veuillez saisir un nom correcte.
 
 #Other
-applications_scripts = Application Scripts
+applications_scripts = Scripts de l'application
