git-svn-id: http://svn.vdombox.ru/flextools/trunk@7596 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
@@ -1,21 +1,22 @@
 # Title
-title = Resources
-toolset_button_label = Resources
+title = Ressources
+toolset_button_label = Ressources
 
 # WorkAreaSkin
 
-work_area_delete_resource = Delete Resource
-work_area_show_info = Show Info
-work_area_hide_info = Hide Info
-work_area_add_resources = Add Resources
-work_area_get_resource = Save Resource
+work_area_delete_resource = Supprimer la ressource
+work_area_show_info = Afficher les informations
+work_area_hide_info = Cacher les informations
+work_area_add_resources = Ajouter une ressource
+work_area_get_resource = Enregistrer la ressource
 
 #List
 
-list_filter = Filter resource
+list_filter = Filtrer
 
 #InfoArea
 
-info_area_name = Name: 
+info_area_name = Nom: 
 info_area_type = Type:  
-info_area_size = Size:  
+info_area_size = Taille:  
+ 
