Localization French Fix outFocus alpha action
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7598 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -1,13 +1,12 @@
 # Title
-title = Events
-toolset_button_label = Events
-
+title = Evénements
+toolset_button_label = Evénements
 # WorkAreaSkin
 
-work_area_save = Save
-work_area_undo = Undo
-work_area_show_hidden = Show hidden
-work_area_show_current = Display mode:
+work_area_save = Enregistrer
+work_area_undo = Retour
+work_area_show_hidden = Afficher les éléments cachés
+work_area_show_current = Mode d'affichage:
 work_area_page = Page: 
 
 # ObjectsTreePanel
@@ -16,20 +15,21 @@ objects_tree_panel_title = PAGES
 
 # EventsPanel
 
-events_panel_events_title = EVENTS
+events_panel_events_title = EVENEMENTS
 events_panel_actions_title = ACTIONS
 
 # ActionElementSkin
 
-action_element_hide = Hide
-action_element_show = Show
-action_element_delete = Delete
+action_element_hide = Cacher
+action_element_show = Afficher
+action_element_delete = Supprimer
 
 # EventElementSkin
 
-event_element_hide = Hide
-event_element_show = Show
-event_element_create_linkage = Create Linkage
-event_element_delete = Delete
+event_element_hide = Cacher
+event_element_show = Afficher
+event_element_create_linkage = Lier
+event_element_delete = Supprimer
 
 delete_Renderer = Are you sure want to delete 
+
