Localization French Fix del new row in TableStructureEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7599 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -5,41 +5,41 @@ toolset_button_label = DataBase
 # CreateNewObjectWindow
 
 create_new_object_window_OK = OK
-create_new_object_window_Cancel = Cancel
-create_new_object_window_Name = Name
+create_new_object_window_Cancel = Annuler
+create_new_object_window_Name = Nom
 create_new_object_window_Base = Base
 
 # DataTable
 
-data_table_data = Data
+data_table_data = Données
 data_table_structure = Structure
 
 # DataTableQuery
 
-data_table_query_sql_string = SQL string
-data_table_query_send_query = send query
-data_table_query_error = Error message from database engine
-data_table_query_data_returned: = Data returned:
+data_table_query_sql_string = Chaine SQL
+data_table_query_send_query = Envoyer la requête
+data_table_query_error = Message d'erreur du moteur de BD
+data_table_query_data_returned: = Résultat:
 
 # DataTableEditor
 
 data_table_editor_pages = Pages:
-data_table_editor_records = Records per page:
-data_table_editor_apply = apply
-data_table_editor_add_row = add row
-data_table_editor_delete_row = delete row
-data_table_editor_commit = commit
-data_table_editor_discard = discard
+data_table_editor_records = Enregistrement par page:
+data_table_editor_apply = appliquer
+data_table_editor_add_row = ajouter une ligne
+data_table_editor_delete_row = Supprimer une ligne
+data_table_editor_commit = Appliquer
+data_table_editor_discard = Annuler
 
 # DataTableStructure
 
-data_table_structure_add = add
-data_table_structure_delete = delete
-data_table_structure_commit = commit
-data_table_structure_discard = discard
+data_table_structure_add = Ajouter
+data_table_structure_delete = Supprimer
+data_table_structure_commit = Appliquer
+data_table_structure_discard = Annuler
 
-data_table_structure_delete_dialog = Remove: You might lose data! Do you really want to remove?
+data_table_structure_delete_dialog = Attention les données vont être perdues, voulez-vous vraiment supprimer la table ?
 
 # SearchBox
 
-search_box_search = Search:
+search_box_search = Chercher:
