sinchronize remoteCall meton in Proxys
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7617 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -21,6 +21,7 @@ some = some
 	
 	create_edit_application_name = Name
 	create_edit_application_description = Description
+	create_edit_application_version = Versoin
 	create_edit_application_save = Ок
 	create_edit_application_cancel = Cancel
 	create_edit_application_script_language = Script Language
