--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -21,6 +21,7 @@ some = certains
 	
 	create_edit_application_name = Nom
 	create_edit_application_description = Description
+	create_edit_application_version = Versoin
 	create_edit_application_cancel = Annuler
 	create_edit_application_script_language = Langage de script
 	
