--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -21,6 +21,7 @@ some = другое
 	
 	create_edit_application_name = Имя
 	create_edit_application_description = Описание
+	create_edit_application_version = Версия
 	create_edit_application_save = Ок
 	create_edit_application_cancel = Отмена
 	create_edit_application_script_language  = Язык скрипта
