Add visual editor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7648 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -9,10 +9,19 @@ create_new_object_window_Cancel = Annuler
 create_new_object_window_Name = Nom
 create_new_object_window_Base = Base
 
+# RenameTableWindow
+
+renaem_table_window_title = Rename table
+
 # DataTable
 
 data_table_data = Données
 data_table_structure = Structure
+data_table_visual = Visual
+data_table_sql_query = SQL query
+data_table_new_table = New table
+data_table_new_base = New base
+data_table_go_to_base = Go to base
 
 # DataTableQuery
 
