--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -9,10 +9,19 @@ create_new_object_window_Cancel = Отмена
 create_new_object_window_Name = Имя
 create_new_object_window_Base = База
 
+# RenameTableWindow
+
+renaem_table_window_title = Переименование таблицы
+
 # DataTable
 
 data_table_data = Данные
 data_table_structure = Структура
+data_table_visual = Редактор
+data_table_sql_query = SQL запрос
+data_table_new_table = Новая таблица
+data_table_new_base = Новая база
+data_table_go_to_base = К базе
 
 # DataTableQuery
 
