--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -9,10 +9,19 @@ create_new_object_window_Cancel = Cancel
 create_new_object_window_Name = Name
 create_new_object_window_Base = Base
 
+# RenameTableWindow
+
+renaem_table_window_title = Rename table
+
 # DataTable
 
 data_table_data = Data
 data_table_structure = Structure
+data_table_visual = Visual
+data_table_sql_query = SQL query
+data_table_new_table = New table
+data_table_new_base = New base
+data_table_go_to_base = Go to base
 
 # DataTableQuery
 
@@ -43,3 +52,7 @@ data_table_structure_delete_dialog = Remove: You might lose data! Do you really 
 # SearchBox
 
 search_box_search = Search:
+
+# TableElement
+
+delete_table = Are you sure want to delete
