Add find in Types and User Category
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7680 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -35,6 +35,14 @@ toolset_button_label = WYSIWYG
 	#ObjectTreePanel
 
 		pages_panel_title = Pages
+		
+	#ToolBoxPanel
+
+	toolbox_panel_filter = Type Filter 
+	toolbox_panel_types_found = Types found
+	toolbox_panel_user_category = User
+	toolbox_panel_add_in_user = Add in User
+	toolbox_panel_del_in_user = Remove in User
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
