--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -20,7 +20,7 @@ toolset_button_label = WYSIWYG
 
 	# ObjectAttributesPanel
 
-		object_attributes_panel_title = propriétés des liens
+		object_attributes_panel_title = propriï¿½tï¿½s des liens
 		object_attributes_panel_save = Enregistrer
 		object_attributes_panel_delete = Supprimer
 		
@@ -37,6 +37,14 @@ toolset_button_label = WYSIWYG
 
 		pages_panel_title = Pages
 
+	#ToolBoxPanel
+
+	toolbox_panel_filter = Type Filter
+	toolbox_panel_types_found = Types found
+	toolbox_panel_user_category = User
+	toolbox_panel_add_in_user = Add in User
+	toolbox_panel_del_in_user = Remove in User
+
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
@@ -46,7 +54,7 @@ toolset_button_label = WYSIWYG
 
 	# MultilineWindow
 
-		multiline_window_title = Fenêtre multiligne
+		multiline_window_title = Fenï¿½tre multiligne
 		multiline_window_add_resource = Ressources
 		multiline_window_save = Enregistrer
 
@@ -59,11 +67,11 @@ toolset_button_label = WYSIWYG
 		resource_selector_window_title = Naviguer dans les ressources
 		resource_selector_window_filter = Filtrer les ressources
 		resource_selector_window_total = Ressources totales:
-		resource_selector_window_upload = Téléchargement du fichier...
-		resource_selector_window_insert = Isérer
+		resource_selector_window_upload = Tï¿½lï¿½chargement du fichier...
+		resource_selector_window_insert = Isï¿½rer
 		
 	# SpinnerPopup
-		spinner_create_resources = Création de la liste des ressources ...
+		spinner_create_resources = Crï¿½ation de la liste des ressources ...
 		spinner_new_resource = Creation d'une ressource ...
 		
 		
@@ -83,20 +91,20 @@ toolset_button_label = WYSIWYG
 		
 		richtext_toolbar_select_all = Tout selectionner
 		richtext_toolbar_remove_format = Supprimer le formattage
-		richtext_toolbar_insert_link = Insérer un lien
-		richtext_toolbar_unlink = Séparer
-		richtext_toolbar_insert_horizontal_rule = Insérer un séparateur horizontal
-		richtext_toolbar_insert_char = Inserer un charactére
+		richtext_toolbar_insert_link = Insï¿½rer un lien
+		richtext_toolbar_unlink = Sï¿½parer
+		richtext_toolbar_insert_horizontal_rule = Insï¿½rer un sï¿½parateur horizontal
+		richtext_toolbar_insert_char = Inserer un charactï¿½re
 		richtext_toolbar_bold = Gras
 		richtext_toolbar_italic = Italique
-		richtext_toolbar_underline = Souligné
-		richtext_toolbar_strikethrough = Barré
-		richtext_toolbar_justify_left = Justifié à gauche
-		richtext_toolbar_justify_right = Justifié à droite
-		richtext_toolbar_justify_center = Justifié au centre
-		richtext_toolbar_justify_full = Totalement justifié
-		richtext_toolbar_insert_ordered_list = Insérer une liste ordonée
-		richtext_toolbar_insert_unordered_list = Insérer une liste non ordonnée
+		richtext_toolbar_underline = Soulignï¿½
+		richtext_toolbar_strikethrough = Barrï¿½
+		richtext_toolbar_justify_left = Justifiï¿½ ï¿½ gauche
+		richtext_toolbar_justify_right = Justifiï¿½ ï¿½ droite
+		richtext_toolbar_justify_center = Justifiï¿½ au centre
+		richtext_toolbar_justify_full = Totalement justifiï¿½
+		richtext_toolbar_insert_ordered_list = Insï¿½rer une liste ordonï¿½e
+		richtext_toolbar_insert_unordered_list = Insï¿½rer une liste non ordonnï¿½e
 		richtext_toolbar_outdent = Diminuer le retrait
 		richtext_toolbar_indent = Augmenter le retrait
 				
