--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -13,6 +13,10 @@ create_new_object_window_Base = Base
 
 renaem_table_window_title = Rename table
 
+# DataTableTree
+
+data_table_tree_new_context = New
+
 # DataTable
 
 data_table_data = Data
