--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -13,6 +13,10 @@ create_new_object_window_Base = База
 
 renaem_table_window_title = Переименование таблицы
 
+# DataTableTree
+
+data_table_tree_new_context = Новый
+
 # DataTable
 
 data_table_data = Данные
