--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -11,17 +11,21 @@ create_new_object_window_Base = Base
 
 # RenameTableWindow
 
-renaem_table_window_title = Rename table
+renaem_table_window_title = Renommer la table
+
+# DataTableTree
+
+data_table_tree_new_context = Nouveau
 
 # DataTable
 
 data_table_data = Données
 data_table_structure = Structure
-data_table_visual = Visual
+data_table_visual = Visuel
 data_table_sql_query = SQL query
-data_table_new_table = New table
+data_table_new_table = Nouvelle Table
 data_table_new_base = New base
-data_table_go_to_base = Go to base
+data_table_go_to_base = Aller à la base de données
 
 # DataTableQuery
 
