Create page window added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7686 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -39,11 +39,11 @@ toolset_button_label = WYSIWYG
 
 	#ToolBoxPanel
 
-	toolbox_panel_filter = Type Filter
-	toolbox_panel_types_found = Types found
-	toolbox_panel_user_category = User
-	toolbox_panel_add_in_user = Add in User
-	toolbox_panel_del_in_user = Remove in User
+	toolbox_panel_filter = Filtre
+	toolbox_panel_types_found = trouvé(s)
+	toolbox_panel_user_category = Favorite
+	toolbox_panel_add_in_user = Add to Favorite
+	toolbox_panel_del_in_user = Remove from Favorite
 
 
 
