--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -42,9 +42,9 @@ toolset_button_label = WYSIWYG
 
 	toolbox_panel_filter = Фильтр ресурсов
 	toolbox_panel_types_found = Найденные типы
-	toolbox_panel_user_category = Пользовательские
-	toolbox_panel_add_in_user = Добавить в Пользовательские
-	toolbox_panel_del_in_user = Удалить из пользовательских
+	toolbox_panel_user_category = Избранное
+	toolbox_panel_add_in_user = Добавить в Избранное
+	toolbox_panel_del_in_user = Удалить из Избранного
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
