--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -4,7 +4,7 @@ toolset_button_label = События
 
 # WorkAreaSkin
 
-work_area_save = Сохранить
+work_area_redo = Повторить
 work_area_undo = Отменить
 work_area_show_hidden = Показать скрытые
 work_area_show_current = Вид показа:
