Undo / Redu and ask save events added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7809 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -4,6 +4,7 @@ toolset_button_label = Events
 
 # WorkAreaSkin
 
+work_area_save = Save
 work_area_redo = Redo
 work_area_undo = Undo
 work_area_show_hidden = Show hidden
