--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -3,6 +3,7 @@ title = Evénements
 toolset_button_label = Evénements
 # WorkAreaSkin
 
+work_area_save = Save
 work_area_redo = Redo
 work_area_undo = Retour
 work_area_show_hidden = Afficher les éléments cachés
