Move some images to ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7822 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -32,3 +32,9 @@ some = some
 	
 	iconchooser_cancel = Cancel
 	iconchooser_ok = Ок
+	
+# Other
+
+	save_the_changes = Save the changes?
+	wanted = Wanted!
+	error = Error!
