--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -30,3 +30,9 @@ some = certains
 	iconchooser_icon = Icone
 	
 	iconchooser_cancel = Annuler
+	
+# Other
+
+	save_the_changes = Save the changes?
+	wanted = Wanted!
+	error = Error!
