--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -32,3 +32,9 @@ some = другое
 	
 	iconchooser_cancel = Отмена
 	iconchooser_ok = Ок
+	
+# Other
+
+	save_the_changes = Сохранить изменения?
+	wanted = Внимание!
+	error = Ошибка!
