--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -41,9 +41,9 @@ toolset_button_label = WYSIWYG
 
 	toolbox_panel_filter = Filtre
 	toolbox_panel_types_found = trouvé(s)
-	toolbox_panel_user_category = Favorite
-	toolbox_panel_add_in_user = Add to Favorite
-	toolbox_panel_del_in_user = Remove from Favorite
+	toolbox_panel_user_category = Favori
+	toolbox_panel_add_in_user = Ajouter aux favoris
+	toolbox_panel_del_in_user = Retirer des favoris
 
 
 
@@ -117,7 +117,7 @@ toolset_button_label = WYSIWYG
 	#Renderer
 	
 		renderer_toolTip = Name: 
-		delete_Renderer = Are you sure want to delete 
+		delete_Renderer = Etes-vous sur de vouloir supprimer l'élément
 		
 	#ContextMenu
 	
