git-svn-id: http://svn.vdombox.ru/flextools/trunk@7837 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -32,5 +32,6 @@ event_element_show = Afficher
 event_element_create_linkage = Lier
 event_element_delete = Supprimer
 
-delete_Renderer = Are you sure want to delete 
+delete_Renderer = Etes-vous sur de vouloir supprimer l'élément
+save_the_changes = Sauvegarder les changements?
 
