--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -34,3 +34,4 @@ event_element_create_linkage = Соединение
 event_element_delete = Удалить
 
 delete_Renderer = Вы уверены что хотите удалить
+save_the_changes = Сохранить изменения?
