--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -34,3 +34,4 @@ event_element_create_linkage = Create Linkage
 event_element_delete = Delete
 
 delete_Renderer = Are you sure want to delete 
+save_the_changes = Save the changes?
