Add undo / redo on panel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7840 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -12,6 +12,9 @@ toolset_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
 	work_area_show_linking = Показывать привязки
+	
+	work_area_undo = Отменить
+	work_area_redo = Повторить
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
