--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -12,6 +12,9 @@ toolset_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
 	work_area_show_linking = Show linking
+	
+	work_area_undo = Undo
+	work_area_redo = Redo
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 # Panels
