--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -33,6 +33,6 @@ some = certains
 	
 # Other
 
-	save_the_changes = Save the changes?
-	wanted = Wanted!
-	error = Error!
+	save_the_changes = Sauvegarder les changements?
+	wanted = Necessaire!
+	error = Erreur!
