git-svn-id: http://svn.vdombox.ru/flextools/trunk@7873 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -11,7 +11,7 @@ toolset_button_label = WYSIWYG
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
-	work_area_show_linking = Show linking
+	work_area_show_linking = Snap
 	
 	work_area_undo = Undo
 	work_area_redo = Redo
