--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -11,7 +11,7 @@ toolset_button_label = WYSIWYG
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
-	work_area_show_linking = Показывать привязки
+	work_area_show_linking = Приравнивать
 	
 	work_area_undo = Отменить
 	work_area_redo = Повторить
