--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -11,7 +11,7 @@ toolset_button_label = WYSIWYG
 	work_area_wysiwyg_button_label = WYSIWYG
 	work_area_xml_button_label = VDOM XML
 	
-	work_area_show_linking = Afficher les liens
+	work_area_show_linking = Casser
 	
 	work_area_undo = Undo
 	work_area_redo = Redo
