Fix not open Library
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7887 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -5,6 +5,9 @@ ok = OK
 cancel = Annuler
 save = Enregistrer
 
+work_area_undo = Undo
+work_area_redo = Redo
+
 # Containers Panel
 containers_panel_title = Conteneurs
 
