--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -5,6 +5,9 @@ ok = OK
 cancel = Cancel
 save = Save
 
+work_area_undo = Undo
+work_area_redo = Redo
+
 # Containers Panel
 containers_panel_title = Containers
 
