--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -55,7 +55,7 @@ data_table_structure_delete_dialog = Remove: You might lose data! Do you really 
 
 # SearchBox
 
-search_box_search = Search:
+search_box_search = Search
 
 # TableElement
 
