--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -55,4 +55,8 @@ data_table_structure_delete_dialog = Attention les données vont être perdues, 
 
 # SearchBox
 
-search_box_search = Chercher:
+search_box_search = Chercher
+
+# TableElement
+
+delete_table = Are you sure want to delete
