git-svn-id: http://svn.vdombox.ru/flextools/trunk@7963 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -8,6 +8,9 @@ save = Save
 work_area_undo = Undo
 work_area_redo = Redo
 
+# Tabs Panel
+tabs_panel_title = Tabs
+
 # Containers Panel
 containers_panel_title = Containers
 
