--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -8,6 +8,9 @@ save = Enregistrer
 work_area_undo = Undo
 work_area_redo = Redo
 
+# Tabs Panel
+tabs_panel_title = Tabs
+
 # Containers Panel
 containers_panel_title = Conteneurs
 
