--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -8,6 +8,9 @@ save = Сохранить
 work_area_undo = Отмена
 work_area_redo = Повторить
 
+# Tabs Panel
+tabs_panel_title = Вкладки
+
 # Containers Panel
 containers_panel_title = Контейнеры
 
