git-svn-id: http://svn.vdombox.ru/flextools/trunk@7965 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -43,9 +43,9 @@ toolset_button_label = WYSIWYG
 
 	toolbox_panel_filter = Type Filter 
 	toolbox_panel_types_found = Types found
-	toolbox_panel_user_category = Favourite
-	toolbox_panel_add_in_user = Add to Favourite
-	toolbox_panel_del_in_user = Remove from Favourite
+	toolbox_panel_user_category = Favorite
+	toolbox_panel_add_in_user = Add to Favorite
+	toolbox_panel_del_in_user = Remove from Favorite
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
