--- a/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
@@ -19,3 +19,8 @@ list_filter = Filter resource
 info_area_name = Name: 
 info_area_type = Type:  
 info_area_size = Size:  
+
+#ResourcesArea
+
+resource_selector_window_upload = Upload File...
+resource_selector_window_filter = Filter resource
