--- a/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/fr_FR/ResourceBrowser_General.properties
@@ -20,3 +20,7 @@ info_area_name = Nom:
 info_area_type = Type:  
 info_area_size = Taille:  
  
+#ResourcesArea
+
+resource_selector_window_upload = Upload File...
+resource_selector_window_filter = Filter resource
