--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -19,3 +19,8 @@ list_filter = Фильтр ресурсов
 info_area_name = Имя: 
 info_area_type = Тип:  
 info_area_size = Размер:  
+
+#ResourcesArea
+
+resource_selector_window_upload = Загрузить файл...
+resource_selector_window_filter = Фильтр ресурсов
