--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -27,6 +27,12 @@ libraries_panel_delete = Delete
 # GlobalScripts Panel
 global_scripts_panel_title = Global Scripts
 
+# FindBox
+find = Find
+replaceWith = Replace With
+replace = Replace
+replaceAll = replaceAll
+
 # Create Action Window
 create_action_window_action_title = Add New Action
 create_action_window_library_title = Add New Library 
