--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -27,6 +27,12 @@ libraries_panel_delete = Supprimer
 # GlobalScripts Panel
 global_scripts_panel_title = Scripts globaux
 
+# FindBox
+find = Find
+replaceWith = Replace With
+replace = Replace
+replaceAll = replaceAll
+
 # Create Action Window
 create_action_window_action_title = Ajouter une nouvelle action
 create_action_window_library_title = Ajouter une nouvelle librairie
