Contextual menu item "Set home" added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8265 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -121,6 +121,7 @@ toolset_button_label = WYSIWYG
 		
 	#ContextMenu
 	
+		contextMenu_start = Set home
 		contextMenu_delete = Delete
 		contextMenu_copy = Copy
 		contextMenu_paste = Paste
