--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -124,6 +124,7 @@ toolset_button_label = WYSIWYG
 		
 	#ContextMenu
 	
+		contextMenu_start = Set home
 		contextMenu_delete = Supprimer
 		contextMenu_copy = Copier
 		contextMenu_paste = Coller
